# multi-pong-remade

./: .gitignore  compile-protobufs.sh
.github/workflows/: build-cpp-linux.yml  build-cpp-windows.yml  build-java-linux.yml  build-rust-windows.yml
_protobufs/: pong.proto
cpp/: CMakeLists.txt  client.cpp  client.h  coordinator.cpp  coordinator.h  logger.h  main.cpp  server.cpp  server.h  vcpkg.json
cpp/include/glad/: glad.h
cpp/tools/: common.h  logger.h  renderer.h  renderer_directx11.cpp  renderer_directx11.h  renderer_opengl.cpp  renderer_opengl.h
java/: build.gradle.kts  settings.gradle.kts
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/sm/: Client.java  Constants.java  Coordinator.java  Main.java  Server.java
java/src/main/java/com/sm/render/: JavaFXRenderer.java  Renderer.java  SwingRenderer.java
python/: .python-version  client.py  coordinator.py  requirements.txt  server.py
rust/: Cargo.toml  build.rs
rust/src/: coordinator.rs  main.rs
rust/src/protobufs/: mod.rs
